--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -68,6 +69,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation 'androidx.core:core-ktx:+'
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     implementation "androidx.room:room-ktx:$room_version"
