--- a/build.gradle
+++ b/build.gradle
@@ -3,21 +3,26 @@ buildscript {
     ext {
         navigation_version = '2.5.3'
         hilt_version = '2.44.2'
+        kotlin_version = '1.8.0'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "androidx.navigation.safeargs:androidx.navigation.safeargs.gradle.plugin:$navigation_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+    repositories {
+        mavenCentral()
     }
 }
 
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
 
 ext {
-    kotlin_version = '1.7.22'
+    kotlin_version = '1.8.0'
     core_version = '1.9.0'
     appcompat_version = '1.6.0'
     material_version = "1.8.0"
